load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "raterrScheduler.go",
        "rrScheduler.go",
        "scheduler.go",
        "wrrScheduler.go",
    ],
    importpath = "github.com/scionproto/scion/go/border/qos/scheduler",
    visibility = ["//visibility:public"],
    deps = [
        "//go/border/qos/queues:go_default_library",
        "//go/border/rpkt:go_default_library",
        "//go/lib/log:go_default_library",
    ],
)
